--- a/youcontribute-ui/src/app/home/home.component.html
+++ b/youcontribute-ui/src/app/home/home.component.html
@@ -12,7 +12,7 @@
               <tr *ngFor="let repository of repositories">                            
                 <td>{{ repository.organization }}</td>
                 <td>{{ repository.name }}</td>
-                <td><a  class="btn btn-primary" [routerLink]="['issues', repository.id]" role="button"><fa-icon [icon]="faBug"></fa-icon> Issues</a></td>
+                <td><a  class="btn btn-primary" [routerLink]="['/repository', repository.id, 'issues']" role="button"><fa-icon [icon]="faBug"></fa-icon> Issues</a></td>
               </tr>
             </tbody>
           </table>
