Added challenge-list ui and contoller.

--- a/youcontribute-ui/src/app/challenges/challenge-list/challenge-list.component.html
+++ b/youcontribute-ui/src/app/challenges/challenge-list/challenge-list.component.html
@@ -14,7 +14,7 @@
                 <td>{{ challenge.repositoryTitle }}</td>
                 <td>{{ challenge.issueTitle }}</td>
                 <td>{{ challenge.creationDate | date: 'medium' }}</td>
-                <td>{{ challenge.status }}</td>
+                <td><app-status [badge-text]="challenge.status"></app-status></td>
               </tr>
             </tbody>
           </table>
